scss/partials/_stream_item.scss
div.stream-item {
  width: #{$board_container_width}px;
  margin-top: 16px;

  @include mobile() {
    width: 100%;
  }

  &:not(.expanded).show-continue-reading {
    div.stream-item-body {
      div.stream-body-left {
        div.stream-item-body-container {
          div.stream-item-body {
            overflow: hidden;
            max-height: 400px;
            &:after {
              display: block;
            }
          }

          button.expand-button {
            display: block;
          }
        }
      }
    }
  }

  div.stream-item-header {
    height: 72px;
    background-color: $light_tan;
    padding: 20px 24px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;

    @include mobile() {
      border-top-left-radius: 0px;
      border-top-right-radius: 0px;
    }

    div.stream-header-head-author {
      float: left;
      width: 55%;
      padding-right: 20px;
      overflow: hidden;

      @include activity-author(32);
    }

    @include new-tag();

    @include section-tag();
  }

  div.stream-item-body {
    padding: 0px;
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
    background-color: #FDFCFB;

    @include mobile() {
      border-bottom-left-radius: 0px;
      border-bottom-right-radius: 0px;
      display: block;
      flex-direction: unset;
    }

    div.stream-body-separator {
      opacity: 0.6;
      background-image: linear-gradient(-180deg, #D8DBDF 0%, rgba(253,252,251,0.00) 100%);
      width: 100%;
      height: 8px;
    }

    div.stream-body-left {
      position: relative;
      padding: 40px 40px 88px 40px;
      background-color: white;

      @include mobile() {
        width: 100%;
        padding: 32px 24px;
        margin: 0px;
      }

      div.stream-attachments {
        position: absolute;
        bottom: 104px;
        width: 465px;

        @include mobile() {
          position: relative;
          bottom: unset;
          width: 100%;
        }
      }

      div.stream-item-headline {
        @include activity-title();
        @include avenir_H();
        font-size: 22px;
        color: $deep_navy;

        @include mobile() {
          margin-top: 16px;
        }
      }

      div.stream-item-body-container {

        div.stream-item-body {
          position: relative;

          &:after {
            display: none;
            $gradient_base_color: white;
            content: "";
            position: absolute;
            height: 48px;
            bottom: 0px;
            left: 0px;
            right: 0px;
            pointer-events: none;
            background: -moz-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%, rgba($gradient_base_color,0) 100%); /* FF3.6+ */
            background: -webkit-gradient(linear, bottom, top, color-stop(0%,rgba($gradient_base_color,0)), color-stop(100%,rgba($gradient_base_color,1))); /* Chrome,Safari4+ */
            background: -webkit-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Chrome10+,Safari5.1+ */
            background: -o-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Opera 11.10+ */
            background: -ms-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* IE10+ */
            background: linear-gradient(to top,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* W3C */
            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$gradient_base_color}', endColorstr='transparent',GradientType=0 ); /* IE6-9 */
          }

          div.stream-item-body-inner {
            margin-top: 24px;
            @include activity-body(18);
            @include avenir_BOOK();
            color: $deep_navy;
            line-height: 28px;

            div.carrot-no-preview, a.carrot-no-preview {
              display: none;
            }
          }
        }

        button.expand-button {
          margin-top: 24px;
          width: 134px;
          height: 40px;
          color: $carrot_green;
          @include avenir_H();
          font-size: 16px;
          text-align: left;
          display: none;
          padding: 9px 7px 9px 22px;
          background-image: cdnUrl("/img/ML/keep_reading_chevron.svg");
          background-size: 14px 8px;
          background-position: 0px 15px;
          background-repeat: no-repeat;
        }
      }

      div.stream-mobile-comments {
        background-color: #FDFCFB;

        @include mobile() {
          background-color: transparent;
          margin-top: 24px;
        }

        div.stream-comments-title {
          @include avenir_H();
          font-size: 14px;
          color: $carrot_dark_gray;
          margin-bottom: 16px;
        }
      }

      div.stream-mobile-comments-summary {
        margin-top: 16px;
        border-top: 1px solid #ECECEC;
        padding-top: 16px;
        position: relative;

        &:after {
          content: "";
          position: absolute;
          width: 9px;
          height: 15px;
          top: 20px;
          right: 0px;
          background-image: cdnUrl("/img/ML/mobile_comments_chevron.svg");
          background-size: 9px 15px;
          background-position: center;
          background-repeat: no-repeat;
        }
      }

      div.stream-item-reactions {
        height: 32px;
        margin-top: 24px;
        position: absolute;
        bottom: 40px;

        div.reactions {
          margin-top: 3px;
        }

        @include mobile() {
          position: relative;
          bottom: unset;

          div.reactions {
            float: left;
          }
        }
      }
    }

    div.stream-body-right {
      position: relative;
      padding: 32px 32px 40px 32px;
      background-color: #FDFCFB;
      max-height: 685px;
      border-bottom-right-radius: 6px;
      border-bottom-left-radius: 6px;

      &.expanded {
        max-height: initial;
      }

      div.stream-body-comments {
        height: 100%;

        div.stream-comments-title {
          @include avenir_H();
          font-size: 14px;
          color: $carrot_dark_gray;
          margin-bottom: 16px;
        }

        &.add-comment-expanded {
          div.stream-comments {
            height: calc(100% - 140px);
          }
        }

        div.stream-comments {
          margin-top: 8px;
          height: calc(100% - 58px);
        }
      }

      div.add-comment-box-container {
        width: calc(100% - 12px);
        margin-right: 12px;
      }
    }
  }
}

