Update the stream tile style and make sure the new attachments are not overflowing the container.

--- a/scss/partials/_stream_item.scss
+++ b/scss/partials/_stream_item.scss
@@ -54,10 +54,8 @@ div.stream-item {
 
   div.stream-item-body {
     padding: 0px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
-    background-color: #FDFCFB;
 
     @include mobile() {
       border-bottom-left-radius: 0px;
@@ -75,7 +73,7 @@ div.stream-item {
 
     div.stream-body-left {
       position: relative;
-      padding: 40px 40px 88px 40px;
+      padding: 40px 40px 40px 40px;
       background-color: white;
 
       @include mobile() {
@@ -85,23 +83,19 @@ div.stream-item {
       }
 
       div.stream-attachments {
-        position: absolute;
-        bottom: 104px;
-        width: 465px;
-
         @include mobile() {
           position: relative;
           bottom: unset;
-          width: 100%;
         }
       }
 
       div.stream-item-headline {
         @include activity-title();
         @include avenir_H();
-        font-size: 22px;
+        font-size: 28px;
         color: $deep_navy;
-
+        line-height: 36px;
+        
         @include mobile() {
           margin-top: 16px;
         }
@@ -133,10 +127,10 @@ div.stream-item {
 
           div.stream-item-body-inner {
             margin-top: 24px;
-            @include activity-body(18);
-            @include avenir_BOOK();
+            @include activity-body(20);
+            @include avenir_R();
             color: $deep_navy;
-            line-height: 28px;
+            line-height: 30px;
 
             div.carrot-no-preview, a.carrot-no-preview {
               display: none;
@@ -200,8 +194,6 @@ div.stream-item {
       div.stream-item-reactions {
         height: 32px;
         margin-top: 24px;
-        position: absolute;
-        bottom: 40px;
 
         div.reactions {
           margin-top: 3px;
